--- a/common/scss/_variable.scss
+++ b/common/scss/_variable.scss
@@ -5,8 +5,8 @@
 ---------------------------------------------*/
 $c-black: #000000;
 $c-white: #ffffff;
-$-primary: #88c6e9;
-$-secondary: #8668ff;
+$c-primary: #88c6e9;
+$c-secondary: #8668ff;
 
 /*---------------------------------------------
  Font
