--- a/scss/1-1.scss
+++ b/scss/1-1.scss
@@ -1,4 +1,4 @@
 @charset "UTF-8";
-@use "../../common/scss/_variable.scss" as *;
+@use "../common/scss/_variable.scss" as *;
 
 // ここからスタイルを記述してください。
