--- a/-kaitourei/common/css/main.css
+++ b/-kaitourei/common/css/main.css
@@ -373,6 +373,7 @@ th {
 }
 
 body {
+  scroll-behavior: smooth;
   color: #000000;
   font-family: "Yu Gothic Medium", "游ゴシック Medium", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
   line-height: 1.5;
