--- a/-kaitourei/scss/1-6.scss
+++ b/-kaitourei/scss/1-6.scss
@@ -2,3 +2,43 @@
 @use "../common/scss/_variable.scss" as *;
 
 // ここからスタイルを記述してください。
+.wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100vh;
+}
+
+.card {
+	position: relative;
+	padding: 55px 120px;
+	border: 3px solid $c-primary;
+	border-radius: 32px;
+	.card__ttl {
+		position: absolute;
+		top: 0;
+		left: 10px;
+		font-size: 40px;
+        font-weight: bold;
+		transform: translateY(-50%);
+	}
+	.card__txt {
+		width: 350px;
+		font-size: 14px;
+		line-height: 2;
+	}
+	.card__btn {
+		position: absolute;
+		bottom: 0;
+		right: 10px;
+		width: 120px;
+		padding-block: 6px;
+		background: $c-black;
+		border-radius: 999px;
+        font-size: 14px;
+		color: $c-white;
+        text-align: center;
+		transform: translateY(50%);
+	}
+}
