--- a/-kaitourei/scss/1-7.scss
+++ b/-kaitourei/scss/1-7.scss
@@ -2,3 +2,36 @@
 @use "../common/scss/_variable.scss" as *;
 
 // ここからスタイルを記述してください。
+.wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100vh;
+}
+
+.card {
+	position: relative;
+	padding: 55px 120px;
+	background: $c-secondary;
+	border-radius: 32px;
+	.card__txt {
+		width: 350px;
+		font-size: 14px;
+		line-height: 2;
+		opacity: 0.5;
+	}
+	.card__btn {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 120px;
+		padding-block: 6px;
+		background: $c-black;
+		border-radius: 999px;
+        font-size: 14px;
+		color: $c-white;
+		text-align: center;
+	}
+}
