--- a/-kaitourei/scss/1-8.scss
+++ b/-kaitourei/scss/1-8.scss
@@ -1,4 +1,41 @@
 @charset "UTF-8";
 @use "../common/scss/_variable.scss" as *;
 
+.main {
+	height: 200vh;
+	background: linear-gradient(180deg, #fff 0%, #e5f9ff 100%);
+}
 // ここからスタイルを記述してください。
+.header {
+	position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 85px;
+	background: linear-gradient(
+		90deg,
+		#fff 0%,
+		#cbefff 11.92%,
+		#4dcaff 26.9%,
+		#d6f3ff 42.12%,
+		#b4e8ff 73.9%,
+		#fff 100%
+	);
+	border-bottom: 1px solid $c-black;
+}
+
+.page-top-btn {
+	position: fixed;
+	bottom: 30px;
+	right: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100px;
+	height: 100px;
+	font-size: 20px;
+	font-weight: bold;
+	border: 1px solid $c-black;
+	border-radius: 50%;
+}
