--- a/-kaitourei/scss/1-9.scss
+++ b/-kaitourei/scss/1-9.scss
@@ -2,3 +2,49 @@
 @use "../common/scss/_variable.scss" as *;
 
 // ここからスタイルを記述してください。
+.wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100vh;
+}
+
+.icons {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	gap: 75px;
+	width: 210px;
+	height: 340px;
+	border: 1px solid $c-black;
+	border-radius: 16px;
+}
+
+.menu {
+	position: relative;
+	width: 25px;
+	height: 20px;
+	.menu__line {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 2px;
+		background: $c-black;
+		&:nth-child(2) {
+			top: 9px;
+		}
+		&:nth-child(3) {
+			top: 18px;
+		}
+	}
+	&--active .menu__line {
+		top: 9px;
+		transform: rotate(45deg);
+		&:nth-child(2) {
+			top: 9px;
+			transform: rotate(-45deg);
+		}
+	}
+}
